Offline pages : Fixed received_bytes for OfflineItem conversion

Fixed the received_bytes field for offline pages to OfflineItem conversion.
Also added all the missing fields to the conversion unit tests.

Bug: 897841
Change-Id: I823a84bc36a9d07c2f955f756c91412d22fa59ae
Reviewed-on: https://chromium-review.googlesource.com/c/1294404
Commit-Queue: Shakti Sahu <shaktisahu@chromium.org>
Reviewed-by: Carlos Knippschild <carlosk@chromium.org>
Reviewed-by: Shakti Sahu <shaktisahu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602110}
Former-commit-id: 9b1829c578c6680cfedba88bcbffee23508a0249